Changed config.